# decscape

./: .gitignore  README.md  requirements.txt
decscape/: __init__.py  __main__.py  __version__.py  compiler.py  constants.py  graph.py  scraper.py  types.py
decscape/utils/: logging.py  logging.yaml
sims/: CMakeLists.txt  histogram.py  main.c  manabase.py  monitor.py  monte_carlo.c  monte_carlo.h  notes.md  report.py  stats.c  stats.h
sims/models/: lands.py
tmp/: README.md
